--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.0",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
     "typewriter-effect": "^2.22.0"
